# nodestream-project-cookiecutter

./: cookiecutter.json
{{cookiecutter.project_name}}/: README.md  nodestream.yaml  pyproject.toml
{{cookiecutter.project_name}}/pipelines/: sample.yaml
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: argument_resolvers.py  interpretations.py  normalizers.py  value_providers.py
